--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
